# DevPilot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  resources.qrc
src/components/: EmptyStateWidget.cpp  EmptyStateWidget.h  FlowLayout.h  ModuleListItem.cpp  ModuleListItem.h  NoteCard.cpp  NoteCard.h  ProcessListItem.cpp  ProcessListItem.h  ProjectDetailsWidget.cpp  ProjectDetailsWidget.h  SidebarWidget.cpp  SidebarWidget.h  TitleBar.cpp  TitleBar.h
src/components/dialogs/: ChooseEditorDialog.cpp  ChooseEditorDialog.h  ModuleEditDialog.cpp  ModuleEditDialog.h  NoteDialog.cpp  NoteDialog.h  ProcessDialog.cpp  ProcessDialog.h  ProjectDialog.cpp  ProjectDialog.h
src/components/home/: EmptyStateWidget.cpp  EmptyStateWidget.h  NoteCard.cpp  NoteCard.h  ProcessListItem.cpp  ProcessListItem.h  ProjectDetailsWidget.cpp  ProjectDetailsWidget.h  SidebarWidget.cpp  SidebarWidget.h  TitleBar.cpp  TitleBar.h
src/components/shared/: FlowLayout.cpp
src/core/: AnsiHtmlConverter.cpp  AnsiHtmlConverter.h  IconManager.cpp  IconManager.h  Logger.cpp  Logger.h  ProjectLauncher.cpp  ProjectLauncher.h  ThemedIcon.cpp  ThemedIcon.h
src/database/: Container.cpp  Container.h  Database.cpp  Database.h
src/database/seeders/: ModuleTemplateSeeder.h  ProcessTemplateSeeder.cpp  ProcessTemplateSeeder.h  README.md  Seeder.cpp
src/events/: AppEvents.cpp  AppEvents.h
src/models/: App.h  Editor.h  Model.h  Module.h  ModuleTemplate.h  Note.h  Process.h  ProcessTemplate.h  Project.h  Setting.h  Snippet.h
src/repositories/: AppRepository.cpp  AppRepository.h  EditorRepository.cpp  EditorRepository.h  IEditorRepository.h  IModuleRepository.h  IModuleTemplateRepository.h  INoteRepository.h  IProjectRepository.h  ISettingRepository.h  ModuleRepository.cpp  ModuleRepository.h  ModuleTemplateRepository.cpp  ModuleTemplateRepository.h  NoteRepository.cpp  NoteRepository.h  ProcessRepository.cpp  ProcessRepository.h  ProcessTemplateRepository.cpp  ProcessTemplateRepository.h  ProjectRepository.cpp  ProjectRepository.h  README.md  RepositoryProvider.h  SettingRepository.cpp  SettingRepository.h  SnippetRepository.cpp  SnippetRepository.h
src/repositories/interfaces/: IAppRepository.h  IEditorRepository.h  IModuleRepository.h  IModuleTemplateRepository.h  INoteRepository.h  IProcessRepository.h  IProcessTemplateRepository.h  IProjectRepository.h  ISettingRepository.h  ISnippetRepository.h
src/seeders/: ISeeder.h  ModuleTemplateSeeder.cpp  ModuleTemplateSeeder.h  Seeder.cpp  Seeder.h
src/styles/: AppStyle.cpp  AppStyle.h  ButtonStyle.cpp  ButtonStyle.h  FontStyle.cpp  FontStyle.h  GroupBoxStyle.cpp  GroupBoxStyle.h  InputStyle.cpp  InputStyle.h  ListItemStyle.cpp  ListItemStyle.h  ListStyle.cpp  ListStyle.h  MenuStyle.cpp  MenuStyle.h  ModuleStyle.cpp  ModuleStyle.h  TableStyle.cpp  TableStyle.h  Theme.h  ThemeManager.cpp  ThemeManager.h
src/windows/: BaseWindow.cpp  BaseWindow.h  HomeWindow.cpp  HomeWindow.h  MainWindow.cpp  MainWindow.h  ModuleWindow.cpp  ModuleWindow.h  ProcessWindow.cpp  ProcessWindow.h  SettingsWindow.cpp  SettingsWindow.h  SnippetsWindow.cpp  SnippetsWindow.h
tests/: CMakeLists.txt  main.cpp
tests/helpers/: TestHelpers.h
tests/repositories/: AppRepositoryTest.cpp  EditorRepositoryTest.cpp  NoteRepositoryTest.cpp  ProcessRepositoryTest.cpp  ProcessTemplateRepositoryTest.cpp  ProjectRepositoryTest.cpp  SnippetRepositoryTest.cpp
